First working version after migration to XText 2.38 - tycho removed